# vox_gui

./: .gitignore  Cargo.toml  FIXES_SUMMARY.md  PERFORMANCE_FEATURES.md  README.md  STYLING.md  TESTING.md  server_log.txt  server_log2.txt
src/: lib.rs
src/client/: app.rs  connection.rs  h264_decoder.rs  mod.rs  renderer.rs  theme.rs
src/common/: auth.rs  crypto.rs  encoder.rs  ffmpeg_encoder.rs  frame_processor.rs  metrics.rs  mod.rs  protocol.rs  quality.rs  transport.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs  video_toolbox.rs  video_toolbox_fixed.rs
src/platform/windows/: media_foundation.rs  mod.rs
src/server/: connection.rs  input_handler.rs  mod.rs  quic_server.rs  screen_capture.rs  server.rs
tests/: crypto_test.rs
