[package]
name = "vox_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Screen capture
scrap = "0.5"
captrs = { version = "0.3", optional = true }

# Networking
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
quinn = "0.11"  # QUIC protocol for better performance
rustls = { version = "0.23", default-features = false, features = ["ring"] }  # TLS encryption
rustls-pemfile = "2.1"
rcgen = "0.13"  # Certificate generation

# Authentication & Security
argon2 = "0.5"  # Password hashing
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"  # Symmetric encryption
x25519-dalek = "2.0"  # Key exchange
ed25519-dalek = "2.0"  # Digital signatures

# Video encoding/decoding
webp = "0.3"
vpx = { version = "0.1", optional = true }  # VP8/VP9 codec
zstd = "0.13"  # Fast compression
image = "0.25"  # Image processing

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Input handling
enigo = "0.2"  # Cross-platform input simulation
rdev = "0.5"   # Raw input capture

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
env_logger = "0.11"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
wayland-client = { version = "0.31", optional = true }

[features]
default = ["software-encoding"]
software-encoding = []
hardware-encoding = ["vpx", "captrs"]
wayland = ["wayland-client"]

[[bin]]
name = "vox_server"
path = "src/bin/server.rs"

[[bin]]
name = "vox_client"
path = "src/bin/client.rs"
